made a basic version of the project