@@ -1,75 +1,67 @@
 package com.svistun.twitter.controller;
 
-import com.auth0.jwt.JWT;
-import com.auth0.jwt.JWTVerifier;
-import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.svistun.twitter.dto.PersonDto;
 import com.svistun.twitter.entity.Person;
-import com.svistun.twitter.entity.Role;
 import com.svistun.twitter.filter.PersonAuthenticationFilter;
-import com.svistun.twitter.service.person.PersonService;
+import com.svistun.twitter.filter.PersonAuthorizationFilter;
 import com.svistun.twitter.service.person.PersonServiceImpl;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
+import lombok.extern.log4j.Log4j2;
 import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Date;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
-import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
-
-@RestController
 @RequiredArgsConstructor
-@RequestMapping("api")
+@RestController
+@RequestMapping("/api/v1/login")
+@Log4j2
 public class AuthController {
     private final PersonServiceImpl personService;
 
-
     @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody PersonDto personDto) {
-        return ResponseEntity.ok().body(personService.saveUser(personDto));
+    public void register(@RequestBody PersonDto personDto, HttpServletRequest request, HttpServletResponse response) throws IOException {
+        Person person = personService.saveUser(personDto);
+        List<String> roles = person.getRoles().stream().map(role ->
+                role.getRoleName().name()).toList();
+
+        String access_token = PersonAuthenticationFilter.generatorAccessToken(request, person.getUsername(), roles);
+        String refresh_token = PersonAuthenticationFilter.generatorRefreshToken(request, person.getUsername(), roles);
+        Map<String, String> tokens = new HashMap<>();
+        tokens.put("access_token", access_token);
+        tokens.put("refresh_token", refresh_token);
+        new ObjectMapper().writeValue(response.getOutputStream(), tokens);
+        log.info("a new user {} with the role was created",personDto.getUsername());
+
     }
 
     @GetMapping("/token/refresh")
-    public void refreshToken(HttpServletRequest request, HttpServletResponse response) throws IOException {
+    public void refreshToken(HttpServletRequest request, HttpServletResponse response) throws Exception {
         String authorizationHeader = request.getHeader(AUTHORIZATION);
         if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
             try {
-                String refresh_token = authorizationHeader.substring("Bearer ".length());
-                Algorithm algorithm = Algorithm.HMAC256("secret".getBytes());
-                JWTVerifier jwtVerifier = JWT.require(algorithm).build();
-                DecodedJWT decodedJWT = jwtVerifier.verify(refresh_token);
-                String username = decodedJWT.getSubject();
-                Person person = personService.getPerson(username);
-                String access_token = JWT.create()
-                        .withSubject(person.getUsername())
-                        .withExpiresAt(new Date(System.currentTimeMillis() + 10 * 60 * 100))
-                        .withIssuer(request.getRequestURI())
-                        .withClaim("roles", person.getRoles().stream().map((Role::eRole)).collect(Collectors.toList()))
-                        .sign(algorithm);
+                String refresh_token = authorizationHeader.substring(7);
+                DecodedJWT decodedJWT = PersonAuthorizationFilter.verifyToken(refresh_token);
+                Person person = personService.getPerson(decodedJWT.getSubject());
+                List<String> roles = person.getRoles().stream().map(role ->
+                        role.getRoleName().name()).toList();
 
+                String access_token = PersonAuthenticationFilter.generatorAccessToken(request, person.getUsername(), roles);
+                refresh_token = PersonAuthenticationFilter.generatorRefreshToken(request, person.getUsername(), roles);
                 Map<String, String> tokens = new HashMap<>();
                 tokens.put("access_token", access_token);
                 tokens.put("refresh_token", refresh_token);
                 new ObjectMapper().writeValue(response.getOutputStream(), tokens);
             } catch (Exception exception) {
-                response.setHeader("error", exception.getMessage());
-                Map<String, String> error = new HashMap<>();
-                error.put("error_message", exception.getMessage());
-                response.setContentType(APPLICATION_JSON_VALUE);
-                new ObjectMapper().writeValue(response.getOutputStream(), error);
+                throw new RuntimeException("Can't write response");
             }
         } else {
             throw new RuntimeException("Refresh token is missing");
@@ -77,3 +69,4 @@ public class AuthController {
     }
 
 }
+
